--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://catullus:yangyang1@github.com/catullus/node_blog.git"
+    "url": "git+https://catullus:<hangsha>@github.com/catullus/node_blog.git"
   },
   "author": "",
   "license": "ISC",
